@@ -1,2 +1,2 @@
-dddS,dC
+500S,0C
 ddd d
